feat: java-lab - 47 runnable Java examples incl. JVM internals